[gd_scene load_steps=25 format=3 uid="uid://j7ibpko03fpv"]

[ext_resource type="Script" path="res://Scripts/Enemies/enemy.gd" id="1_w6vca"]
[ext_resource type="Resource" uid="uid://bhmuijwlibq3r" path="res://Resources/CharacterStats/ground_enemy_stats.tres" id="2_hap2k"]
[ext_resource type="Shader" path="res://Shaders/enemy_effect.gdshader" id="3_3s2mp"]
[ext_resource type="Script" path="res://Scripts/state_machine.gd" id="3_y3pmt"]
[ext_resource type="Texture2D" uid="uid://dv6b8bx1b3e5u" path="res://Assets/Enemies/GroundEnemySpawn.png" id="4_p5ck5"]
[ext_resource type="Script" path="res://Scripts/Enemies/MeleeEnemy/spawn.gd" id="4_upi6g"]
[ext_resource type="Script" path="res://Scripts/Enemies/MeleeEnemy/idle.gd" id="5_v6kxs"]
[ext_resource type="Script" path="res://Scenes/Enemies/wander.gd" id="7_4dv7g"]
[ext_resource type="Script" path="res://Scripts/Enemies/MeleeEnemy/hit.gd" id="7_it6n8"]
[ext_resource type="Script" path="res://Scripts/Enemies/MeleeEnemy/death.gd" id="8_14l0o"]
[ext_resource type="Script" path="res://Scripts/Enemies/MeleeEnemy/fall.gd" id="9_gy3v8"]
[ext_resource type="Script" path="res://Scripts/HitAndHurtBoxes/hurtbox.gd" id="9_pu8q8"]
[ext_resource type="Script" path="res://Scripts/HitAndHurtBoxes/hitbox.gd" id="10_ypkms"]
[ext_resource type="Texture2D" uid="uid://boee6m3ad2iko" path="res://Assets/Enemies/GroundEnemyMove.png" id="14_wgnwa"]
[ext_resource type="Texture2D" uid="uid://cgewqi3j3xgbw" path="res://Assets/Enemies/GroundEnemy.png" id="15_ide0g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1o4l8"]
size = Vector2(10, 17)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lvrvd"]
resource_local_to_scene = true
shader = ExtResource("3_3s2mp")
shader_parameter/blink_color = Color(1, 1, 1, 1)
shader_parameter/blink_intensity = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t724e"]
size = Vector2(10, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hovju"]
size = Vector2(8, 16)

[sub_resource type="Animation" id="Animation_a240i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_p5ck5")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_luvi5"]
resource_name = "idle"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("15_ide0g")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_8va21"]
resource_name = "move"
length = 0.40001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("14_wgnwa")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_nlqva"]
resource_name = "spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_p5ck5")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3, 4, 5, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_md16w"]
_data = {
"RESET": SubResource("Animation_a240i"),
"idle": SubResource("Animation_luvi5"),
"move": SubResource("Animation_8va21"),
"spawn": SubResource("Animation_nlqva")
}

[node name="GroundEnemy" type="CharacterBody2D"]
z_index = 2
collision_layer = 64
collision_mask = 2
script = ExtResource("1_w6vca")
stats = ExtResource("2_hap2k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8.5)
shape = SubResource("RectangleShape2D_1o4l8")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_lvrvd")
position = Vector2(0, -16)
texture = ExtResource("4_p5ck5")
hframes = 6

[node name="StateMachine" type="Node2D" parent="." node_paths=PackedStringArray("context", "initial_state")]
script = ExtResource("3_y3pmt")
context = NodePath("..")
initial_state = NodePath("Spawn")

[node name="Spawn" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("idle")]
script = ExtResource("4_upi6g")
idle = NodePath("../Idle")
state_anim = "spawn"

[node name="SpawnTimer" type="Timer" parent="StateMachine/Spawn"]
one_shot = true

[node name="Wander" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("hit", "fall")]
script = ExtResource("7_4dv7g")
hit = NodePath("../Hit")
fall = NodePath("../Fall")
state_anim = "move"

[node name="LeftRay" type="RayCast2D" parent="StateMachine/Wander"]
position = Vector2(-6, -1)
target_position = Vector2(0, 5)
collision_mask = 2
hit_from_inside = true

[node name="LeftRay2" type="RayCast2D" parent="StateMachine/Wander"]
position = Vector2(-5, -2)
target_position = Vector2(-4, 0)
collision_mask = 2
hit_from_inside = true

[node name="RightRay" type="RayCast2D" parent="StateMachine/Wander"]
position = Vector2(6, -1)
target_position = Vector2(0, 5)
collision_mask = 2
hit_from_inside = true

[node name="RightRay2" type="RayCast2D" parent="StateMachine/Wander"]
position = Vector2(5, -2)
target_position = Vector2(4, 0)
collision_mask = 2
hit_from_inside = true

[node name="Idle" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("wander")]
script = ExtResource("5_v6kxs")
wander = NodePath("../Wander")

[node name="Hit" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("idle", "death")]
script = ExtResource("7_it6n8")
idle = NodePath("../Idle")
death = NodePath("../Death")

[node name="HitTimer" type="Timer" parent="StateMachine/Hit"]
wait_time = 0.2
one_shot = true

[node name="Death" type="Node2D" parent="StateMachine"]
script = ExtResource("8_14l0o")

[node name="Fall" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("idle")]
script = ExtResource("9_gy3v8")
idle = NodePath("../Idle")

[node name="EnemyHurtbox" type="Area2D" parent="." node_paths=PackedStringArray("context")]
collision_layer = 32
collision_mask = 4
script = ExtResource("9_pu8q8")
context = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHurtbox"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_t724e")

[node name="EnemyHitbox" type="Area2D" parent="." node_paths=PackedStringArray("context")]
collision_layer = 16
collision_mask = 8
script = ExtResource("10_ypkms")
context = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitbox"]
position = Vector2(-1, -8)
shape = SubResource("RectangleShape2D_hovju")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_md16w")
}
autoplay = "spawn"

[node name="InvulnerabilityTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="StateMachine/Spawn/SpawnTimer" to="StateMachine/Spawn" method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="StateMachine/Hit/HitTimer" to="StateMachine/Hit" method="_on_hit_timer_timeout"]
[connection signal="area_entered" from="EnemyHurtbox" to="EnemyHurtbox" method="_on_area_entered"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_invulnerablilty_timer_timeout"]
